add_library(tads2 STATIC osifc.c osrestad.c oem.c argize.c bif.c bifgdum.c cmap.c cmd.c dat.c dbgtr.c errmsg.c execmd.c fio.c fioxor.c getstr.c ler.c linfdum.c lst.c mch.c mcm.c mcs.c obj.c oserr.c os0.c out.c output.c ply.c qas.c regex.c run.c runstat.c suprun.c trd.c voc.c vocab.c)
tadsdefs(tads2)
